[package]
name = "tySheetSu"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
umya-spreadsheet = "1.2.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = {version = "1.0.114", features = ["preserve_order"] }
getrandom = { version = "0.2.12", features = ["custom"] }


[profile.dev]
lto = true          # Enable link-time optimization
strip = false        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

